--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "antd": "^2.8.0",
+    "axios": "^0.15.3",
+    "babel-polyfill": "^6.23.0",
+    "history": "^4.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^5.0.0-alpha.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.8.2",
     "redux-saga": "^0.14.3"
   },
   "devDependencies": {
